# Rhythm-Realms

./: .gitignore  .gitmodules  CMakeLists.txt  Todo.md  vckpkg_setup.bat
Capstone Project/: Notes.md  Reminder.txt
Capstone Project/SFML 3 Template1/: .gitignore  Arrow.cpp  Arrow.h  BPM.cpp  BPM.h  Background.cpp  Background.h  BossPool.h  BpmStream.cpp  BpmStream.h  Bpmcombatsystem.h  Chunk.cpp  Chunk.h  Constants.h  Debug.cpp  Debug.h  DynamicBackground.cpp  Enemy1.cpp  Enemy1.h  Enemy2.cpp  Enemy2.h  Enemy3.cpp  Enemy3.h  EnemyCollision.h  EnemySpawnManager.cpp  EnemySpawnManager.h  EnemyTextures.cpp  EnemyTextures.h  FuzzyBpmController.cpp  FuzzyBpmController.h  Game.cpp  Game.h  Hub.cpp  Hub.h  Item.h  ItemDatabase.cpp  ItemDatabase.h  Menu.cpp  Menu.h  Npc.cpp  (+18 more)
Capstone Project/SFML 3 Template1/ASSETS/CHUNKS/: Chunk1(Forest).tmj  Chunk1(Medival).tmj  Chunk1(hub).tmj  Chunk2(Forest).tmj  Chunk2(hub).tmj  Chunk3(Factory).tmj  Chunk3(Forest).tmj  Chunk3(hub).tmj  Chunk4(Forest).tmj
Capstone Project/SFML 3 Template1/ASSETS/Shaders/: expedition_vignette.frag  hub_lighting.frag
Capstone Project/SFML 3 Template1/ASSETS/Tiles/: Factory.tsj  Forest.tsj  Forest.tsx  Hub.tsj  Medival.tsj
Capstone Project/SFML 3 Template1/Headers/: DynamicBackground.h  Game.h  Npc.h  Player.h
Rhythm docs/: Template-Project-Game-Design-Document.docx  Template-Project-Report.docx  Template-Project-Technical-Design-Document.docx  Video link.txt
Spotify test/: Server test.txt  bpm_cache.json  server.js  start_spotify_server.bat
Spotify test/Project1/: CMAKE.txt  FileName.cpp  Project1.sln  Project1.vcxproj
